upload photos by api in local mongo db

--- a/UI/image-api-search/src/app/image-search/image-search.component.html
+++ b/UI/image-api-search/src/app/image-search/image-search.component.html
@@ -6,5 +6,8 @@
     <mat-tab label="Pexels">
       <app-pexels-search></app-pexels-search>
     </mat-tab>
+    <mat-tab label="Upload to local database">
+      <app-upload-image></app-upload-image>
+    </mat-tab>
   </div>
 </mat-tab-group>
