--- a/UI/image-api-search/src/app/image-search/image-search.component.html
+++ b/UI/image-api-search/src/app/image-search/image-search.component.html
@@ -1,8 +1,8 @@
 <mat-tab-group mat-align-tabs="center">
   <div id="tabs-content">
-    <mat-tab label="Imgur">
-      <app-imgur-search></app-imgur-search>
-    </mat-tab>
+<!--    <mat-tab label="Imgur">-->
+<!--      <app-imgur-search></app-imgur-search>-->
+<!--    </mat-tab>-->
     <mat-tab label="Pexels">
       <app-pexels-search></app-pexels-search>
     </mat-tab>
